Updated framework